# short-it

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  flake.nix  module.nix  package.nix  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: deploy.yml  test.yml
docs/: conf.py
short_it/: __init__.py  app.py  config.py  exc.py  parse_config.py  utils.py  web_logic.py
tests/: test_app_module.py  test_config.py  test_parse_config.py
