[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "short-it"
description = "My personal link shorter adapted to my needs and special link structure!"
version = "0.1.0"
license = "MIT"
authors = []
readme = "README.md"
repository = "https://github.com/PerchunPak/short-it"


[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

# Our dependecies
omegaconf = "~2.3"
structlog = "22.3.0"
### For colors in structlog ###
### Only needed for Windows ###
colorama = { version = "*", markers="platform_system == 'Windows'" }


[tool.poetry.group.make.dependencies]
black = "~23"
isort = "~5.12"
pycln = "~2.1"
doc8 = "~1.1"
mypy = "~1.1"
flake8 = "~6"
flake8-docstrings = "~1"
flake8-ensure-ascii = "~1.0"
pydocstyle = ">=4.0.0"
safety = "~2.3"
cruft = "~2.12"
lice = "~0.6"  # for generating template

pre-commit = "~3.2"


[tool.poetry.group.tests.dependencies]
pytest = "~7.2"
pytest-cov = "~4.0"
pytest-mock = "~3.10"
pytest-testmon = "~1.4"
pytest-randomly = "~3.12"
Faker = "~18.2"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.28"
GitPython = "~3.1"


[tool.black]
line-length = 120
target-version = ['py38']
