[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "short-it"
description = "My personal link shorter adapted to my needs and special link structure!"
version = "0.1.0"
license = "MIT"
authors = []
readme = "README.md"
repository = "https://github.com/PerchunPak/short-it"


[tool.poetry.dependencies]
python = "~3.11"

# Our dependecies
omegaconf = "~2.3"
fastapi = "~0.110"
uvicorn = "~0.27"
sentry-sdk = { extras = ["fastapi"], version = "~1.40" }


[tool.poetry.group.make.dependencies]
black = "~23"
isort = "~5.12"
pycln = "~2.2"
doc8 = "~1.1"
flake8 = "~6"
flake8-docstrings = "~1"
flake8-ensure-ascii = "~1.0"
pydocstyle = ">=4.0.0"
safety = "~2.3"
cruft = "~2.15"
lice = "~0.6"  # for generating template

pre-commit = "~3.4"


[tool.poetry.group.typing.dependencies]
mypy = "~1.5"


[tool.poetry.group.tests.dependencies]
pytest = "~7.4"
pytest-cov = "~4.1"
pytest-mock = "~3.11"
pytest-testmon = "~2.0"
pytest-randomly = "~3.15"
Faker = "~19.3"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.31"
GitPython = "~3.1"


[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
dumb-init = "~1.2"


[tool.black]
line-length = 120
target-version = ['py311']
